<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bookinventoryappstage2.BookDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:layout_marginRight="@dimen/padding_margin"
            android:layout_marginTop="@dimen/padding_margin"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="Name" />

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/book_thick_generic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:layout_marginTop="@dimen/padding_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_margin"
                android:textColor="@android:color/black"
                tools:text="100$" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:layout_marginTop="@dimen/padding_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quantity"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_margin"
                android:textColor="@android:color/black"
                tools:text="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_decrease"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/by_number_edit_view"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/one" />

            <Button
                android:id="@+id/increase_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_margin"
                android:text="@string/increase" />

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/decrease" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_info"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/supplier_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_margin"
                android:textColor="@android:color/black"
                tools:text="Dave" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_email"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/supplier_email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_margin"
                android:textColor="@android:color/black"
                tools:text="a@b.com" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_phone"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/supplier_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_margin"
                android:textColor="@android:color/black"
                tools:text="123456789" />
        </LinearLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginTop="@dimen/padding_margin"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>
